# Krasnoturansk

./: .gitignore
ConvertDict/: ConvertDict.sln
ConvertDict/ConvertDict/: ConvertDict.csproj  Dict.cs  Program.cs  Text.cs
ConvertDict/ConvertDict/Properties/: AssemblyInfo.cs
Data/: O'Henry.txt  XMLFile1.xml
Repetition/: WpfApp1.sln
Repetition/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  Model.cs  QuizControl.cs  WpfApp1.csproj
mueller-dict-3.1.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.koi8r  configure  configure.ac
mueller-dict-3.1.1/dict/: Makefile.am  Makefile.in  mueller-abbrev.dict.dz  mueller-abbrev.index  mueller-base.dict.dz  mueller-base.index  mueller-dict.dict.dz  mueller-dict.index  mueller-geo.dict.dz  mueller-geo.index  mueller-names.dict.dz  mueller-names.index
mueller-dict-3.1.1/site/: Makefile.am  Makefile.in  index-cp866.html  index-iso88595.html  index-koi8r.html  index-maccyrillic.html  index-utf8.html  index-windows1251.html  index.html  index.html.ru  pad_file.xml  script.js  style.css
mueller-dict-3.1.1/site/cgi-bin/: Makefile.am  Makefile.in  dict-foot  dict-javascript  dict-top  dict.cgi  dictconfig.pm  overconf  say.cgi  strings.pm
mueller-dict-3.1.1/site/images/: Makefile.am  Makefile.in
mueller-dict-3.1.1/site/scripts/: Makefile.am  Makefile.in  convert  dicthash  mkdatadir  update-dict-db
mueller-dict-3.1.1/src/: Makefile.am  Makefile.in  mueller-abbrev  mueller-dict  mueller-geo  mueller-names
mueller-dict-3.1.1/src/scripts/: Makefile.am  Makefile.in  check-order  check-trans  conv  prefmt
