EXTRA_DIST = \
	41.gif  54.gif  68.gif  6f.gif  77.gif  down-arrow.gif  note.gif \
	44.gif  5a.gif  69.gif  70.gif  7a.gif  down.gif        pix.gif \
	45.gif  62.gif  6a.gif  72.gif  8d.gif  earth.gif       sflogo.png \
	49.gif  64.gif  6b.gif  73.gif  ab.gif  f9.gif          speaker.gif \
	4e.gif  65.gif  6c.gif  74.gif  c3.gif  76.gif          up-arrow.gif \
	51.gif  66.gif  6d.gif  75.gif  c7.gif  up.gif          c8.gif \
	53.gif  67.gif  6e.gif  screenshot.gif  icon.gif
